Setting margin from left & right nav menu options > 0 to avoid alignment issue

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -335,6 +335,7 @@ body {
   display: flex;
   justify-content: flex-end;
   list-style-type: none;
+  margin: 0;
   width: 30%;
 }
 
@@ -381,6 +382,7 @@ body {
   align-items: center;
   display: flex;
   list-style: none;
+  margin: 0;
   width: 30%;
 }
 
